--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "author": "chrstnl",
     "homepage": "https://chrstnl.com/",
     "scripts": {
-        "dev": "next dev",
-        "build": "next build",
+        "dev": "next dev -p 3001",
+        "build": "next build && next export",
         "start": "next start",
         "lint": "next lint"
     },
